--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "iPaoo",
-  "author": "Zendesk",
-  "version": "2.2.4",
+  "author": "Greg",
+  "version": "1.0.0",
   "api_version": 2,
   "default_locale": "en-us",
   "settings": [
